# learn_opengl

./: CMakeLists.txt  README.md  again.sh  build.sh  recreate_build.sh  temp.txt
Resources Files/Shaders/: default.vert
dependencies/glad/: glad.h
include/: EBO.hpp  ShaderClass.hpp  VAO.hpp  VBO.hpp
include/glad/: glad.h
src/: EBO.cpp  ShaderClass.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp
